<resources>
    <string name="app_name">CourierApp</string>

    <string name="sign_up_text"><u>Sign up</u></string>

    <string name="fill_in_all_fields">Fill in all the fields</string>

    <!-- Registration -->
    <string name="registration_error">Registration error</string>
    <string name="registration_user_exists">This user already exists</string>
    <string name="registration_success">User registered successfully</string>
    <string name="registration_passwords_mismatch">The password and confirm password fields do not match</string>
    <string name="registration_sign_up_button">Sign up</string>

    <!-- Courier profile -->
    <string name="profile_title">Profile</string>
    <string name="additional_title">More</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="name">Name</string>
    <string name="patronymic">Patronymic</string>
    <string name="rating_text">Rating: %s / 5.0</string>
    <string name="profile_rating_count_text">Based on %s reviews</string>
    <string name="profile_change_data_button_text">Change data</string>
    <string name="profile_log_out_button_text">Log out</string>
    <string name="profile_money_text">Money</string>
    <string name="profile_update_error">Profile update error</string>
    <string name="profile_get_courier_error">Profile get courier error</string>

    <!-- Sign in -->
    <string name="sign_in_button">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="do_not_have_an_account">Don\'t have an account?</string>
    <string name="sign_in_error">Sing in error</string>
    <string name="sign_in_incorrect_password_or_login">Incorrect login or password</string>

    <!-- Pin Code -->
    <string name="pin_codes_do_not_match">Pin codes don\'t match</string>
    <string name="enter_the_pin_code_again">Enter the pin code again</string>
    <string name="pin_code_name_title" translatable="false">%s %s</string>
    <string name="wrong_pin_code">Wrong pin code</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="language_title">Language</string>
    <string name="russian_language">Russian</string>
    <string name="english_language">English</string>
    <string name="title_general_settings">General</string>

    <!-- Loading -->
    <string name="loading">Loading…</string>

    <!-- Order -->
    <string name="order_item_id">Order № %s</string>
    <string name="courier_reward_text">Reward: %s</string>
    <string name="loading_orders_error">Loading orders error</string>

    <!-- Order details -->
    <string name="order_details_title">Order details</string>
    <string name="order_details_client_text">Client: %s %s</string>
    <string name="order_details_products_text">Products:</string>
    <string name="order_details_address_text">Address: %s</string>
    <string name="order_details_take_order_button_text">Take Order</string>
    <string name="order_details_description_text">Description:</string>

    <!-- Dialog -->
    <string name="dialog_confirmation_title">The confirmation</string>
    <string name="dialog_logout_message">Are you sure you want to reset the access PIN code and log in with your phone number?</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok" translatable="false">OK</string>

    <!-- Active orders -->
    <string name="active_order_list_title">Active</string>
    <string name="complete_order_button_text">Complete</string>
    <string name="cancel_order_button_text">Cancel</string>

    <string name="available_order_list_title">Available</string>
    <string name="history_title">History</string>


    <string name="complete_order_error">Complete order error</string>
    <string name="complete_order_success">You are complete the order!</string>
    <string name="orders_completed_for_all_time">Orders completed for all time: %s</string>
    <string name="earned_for_all_time">Earned for all time: %s</string>

</resources>