<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/order_details_client_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/order_details_client_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:text="Client: Andrey Morgunov" />

        <TextView
            android:id="@+id/order_details_address_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/order_details_address_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:text="Address: Ул. Грибоедова, д.63В" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/order_details_products_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/order_details_products_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:text="Product 1\nProduct 2\nProduct 3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/order_details_description_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/order_details_description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:text="Description 1" />

        <TextView
            android:id="@+id/order_details_rating_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/rating_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/order_details_reward_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/courier_reward_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/open_chat_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Open chat"
            android:textSize="18sp" />

        <Button
            android:id="@+id/complete_order_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/complete_order_button_text"
            android:textSize="18sp" />

        <Button
            android:id="@+id/cancel_order_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/cancel_order_button_text"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>